--- a/router/Dockerfile
+++ b/router/Dockerfile
@@ -12,8 +12,8 @@ RUN apk add --update-cache \
 	&& rm -rf /var/cache/apk/*
 
 # install confd
-RUN curl -sSL -o /usr/local/bin/confd https://s3-us-west-2.amazonaws.com/opdemand/confd-git-73f7489 \
-  && chmod +x /usr/local/bin/confd
+RUN curl -sSL -o /usr/local/bin/confd https://github.com/kelseyhightower/confd/releases/download/v0.11.0/confd-0.11.0-linux-amd64 \
+	&& chmod +x /usr/local/bin/confd
 
 # add nginx user
 RUN addgroup -S nginx && \
